--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,34 @@
-#gameScreen {
-    border: 3px, solid, black;
+html,body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Press Start 2P', monospace;
+    text-align: center;
+}
+h1 {
+    font-size: 2rem;
+    line-height: 2.5rem;
+    color: gold;
+    padding: 10px;
+}
+div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+button{
+    font-family: 'Press Start 2P', monospace;
+    font-size: 1rem;
+    margin: 40px 25px 40px 25px;
+    padding: 10px 30px;
+    outline: 7px solid;
+}
+body {
+    background-color: darkblue;
+    background-size: cover;
+    background-repeat: space;
+}
+canvas {
+    background-color: dodgerblue;
+    outline: 10px solid;
+    padding: 20px;
 }
