--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,14 @@
 html,body {
     margin: 0;
     padding: 0;
+    text-align: center;    
     font-family: 'Press Start 2P', monospace;
-    text-align: center;
 }
 h1 {
-    font-size: 2rem;
-    line-height: 2.5rem;
+    font-size: 3rem;
     color: gold;
     padding: 10px;
+    margin-left: 5px;
 }
 div {
     display: flex;
@@ -18,9 +18,9 @@ div {
 button{
     font-family: 'Press Start 2P', monospace;
     font-size: 1rem;
-    margin: 40px 25px 40px 25px;
+    margin: 40px;
     padding: 10px 30px;
-    outline: 7px solid;
+    outline: 8px solid;
 }
 body {
     background-color: darkblue;
