--- a/css/style.css
+++ b/css/style.css
@@ -12,22 +12,25 @@ h1 {
     color: gold;
     margin-left: 10px;
 }
+h2 {
+    font-size: .5rem;
+    color: hotpink;
+    margin: 25px;
+}
 div {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 2rem;
 }
 canvas {
     background-color: darkblue;
-    outline: 10px solid;
+    outline: 8px solid;
 }
 button{
     font-family: 'Press Start 2P';
     font-size: 1rem;
     background-color: gray;
-    margin: 50px;
-    width: 150px;
+    width: 250px;
     height: 50px;
     outline: 8px solid;
 }
