--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ h1 {
     margin-left: 10px;
 }
 h2 {
-    font-size: .5rem;
+    font-size: 1rem;
     color: hotpink;
     margin: 25px;
 }
@@ -29,8 +29,10 @@ canvas {
 button{
     font-family: 'Press Start 2P';
     font-size: 1rem;
+    letter-spacing: .5em;
     background-color: gray;
     width: 250px;
     height: 50px;
     outline: 8px solid;
+    margin-top: 10px;
 }
