still working on cannvas wrapping player movementgit add . bedtime

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ div {
     justify-content: center;
 }
 canvas {
-    background-color: darkblue;
+    background-color: black;
     outline: 8px solid;
 }
 button{
